@@ -9,6 +9,7 @@ DIST grsecurity-sources-extras-4.9.51.tar.xz 2581044 SHA256 921c41a8577585b21baa
 DIST grsecurity-sources-extras-4.9.52.tar.xz 2602456 SHA256 5b8074d5bfc88f5aee8614357226d563860a575ba4b8c918d74b95a2f0ceafff SHA512 e77fe1dbeb7eb3d3f8e94a17500b1270ec8db465b8425437459eca37a8e5d154832675580102934d0d8a1a6b5dba643c5c03e9a3c3bd2673a8bc25a88d8e64ad WHIRLPOOL b3be8b0200a7ad68200b101d2613644ad088710e30b3c7403f910050b9a603abcab877d2b38db4bc349eea93b6a1ac84eeef9bfdcdd6835b4ce12bc6d785168b
 DIST grsecurity-sources-extras-4.9.53.tar.xz 2618408 SHA256 e75f863db4c2d592f64f6352b2294105116e29fa4707c50d3ee595eae88b8a66 SHA512 3ef5cf91cf7cb7a30680e5db935479b0f78a93e42dfb0041a9840561735d3b464bb1b2e6428c5994e17553833126b396a4f74c7d0147fca95488ee7d40483281 WHIRLPOOL 4067cf935789dbc392de9668b418c08b7602f3e518c46b1423114be9ead189b86f2e505aad485a48b0300af64b80ed615446a825b60ef0db4c3a11605caac0d1
 DIST grsecurity-sources-extras-4.9.54.tar.xz 2646488 SHA256 b30ec3a3acc1affcc1193535b5ceb0d76ab52318c31848a1b7b710721e7e8bd3 SHA512 f0d34c55df0826d1609e85bdf3e5a0134b86dbfbb97e6f96b9f49fb7d091b9b95f11f3c17007d541cd96bb2d0dcfd527eb9c319f2aef039e0350e6de2e629a79 WHIRLPOOL 491713baf62e6305bc7da94647f68f8d92cd508eaa7172d79f4587902f4f660b97785a460758697b03fcf3863e9369fd9932daa9745aea6335440a1ac3e61313
+DIST grsecurity-sources-extras-4.9.56.tar.xz 2672508 SHA256 04e05202014f3b29a67489df81c81317d39d5a4cf6f54cece8ee22c9cd655ef1 SHA512 14d954c8318d4bd35a265555d081a620bda2d3a5244eeef7bf150267e03ecd7acc5da7fb20673c4535d5363691fe2a9015616a5a440e43c0ff5824b5ca8fc05c WHIRLPOOL 6d1e7320927202f2b257b7017315768220e35558cc70072c666f1b0ecf7d5ff91460695629fb6ff4df30bcebbe56ea6b2f6a63d8945999798b442fd6785b9271
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -18,21 +19,22 @@ EBUILD grsecurity-sources-4.9.51.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.52.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.53.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.54.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 1726 SHA256 7d679d2b3149c0519e6123c63bbe578ed80cbbf8b133fde8c4dc8505881ec494 SHA512 226aa504c25ce46bb05f3de69de91fc481a3956227e9a86c4cccd3674d7283d58e4b535e1f9a08e0835035067dd758d35b5bbde5c9e3b802dd34d19e64f23c7d WHIRLPOOL 3cb6faf4e60c53a510c1c8bf2fa2bc7cbdcd627db2ff9c4e61161390776cfa07beb50762b4761650150251420df33af5e4b1b40058fff763c59a747848437882
+EBUILD grsecurity-sources-4.9.56.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 1921 SHA256 a0de69fdb7d2fb7c2433c4f64504609eb1d42cbf4b96f23f58292f7a7b60223d SHA512 1e44cf6917836dfab8e966cf5d19284ee71fdaa08b1bd314245038065b79a866a0bb75e69363e3595a34b91f933e1a1596c59b0e6eda779129181e2b3719df2f WHIRLPOOL ba24d9f13000ae20cce222726057d2d89eb62f74c4e5bb845d28fa921037e844f21a64b2d128af33d6191e7c1fa1e52d8e23f08503cc13522d0e53ee7a099473
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnbiVsACgkQunvTUHGU
-RZ8zJQ//YpctJIZ1wzueAs18WgP5yswyob8X6QcrsvZTRCQI1Sh5g/LYTygl2eyg
-Dl/fu8d5fHcOwNwY0QrW+H2TWVMYlsfh8FoS29lXIYTuW53HhiSmysq0C5WB6Dpi
-JYfhRiVMtaMGq2O5Qj2ypuyz5yulWdisLoRP2bXQW7Bzmcg3Hfo1wQNyVGEB6iIx
-CSDUqSJUX84LOs7aDYg+nxfp5++Oo155zwARDS0LoKe9/KuiZm9635eSoSLC0E/o
-F496huKjYO5KtfSBS4ZPcy21DuulE8RXcSFEF9hQVDZxtjCooi7U9zzUVU9QBYHJ
-ip2x8CYVdjK5ZUnm3EFfgZTpLOaZXqSbCeARvUxGA1+AiuO5eIljyX4viO7Ju0Xc
-Z5p+mO3T/kuxAlXf+7kWFAWZTyS9WlrIZyJVlO1kk6g3Pgdf2CrRuWxMbtyV3XEA
-4KP8LLE839J0w+KzSVfPtQnpxni74sS7T8R+aFXUkwIXqUOgtSQOFEYqLyzZ/6Wq
-sRlDQpacF9fXlqo3YbMWPs/ZwL3nD8q/Pzyq+Hs+7uJ5N+3yS81KAxvbpr1kG8C0
-18p3GxCcg3viNUCdlPHhKixVnfFWUgi4uHEVwK8C2VzqQBQiHWP4oI35JhsVj/YH
-kY3tiKhioODl/TYFs/O2D5vaFsLJUBgP+ZKKdtCHfp8hnuoDSmo=
-=CzRH
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlngbOUACgkQunvTUHGU
+RZ+OSRAAo4aKvguim7KovD/vYYa6jhUmgyQWfTuvGiTWxYfoQnSFhtKyQ8MvtJn7
+TG8TFZiN14F63dd9H7qSiqiQdwnow/3sHD1wzxjxolnZto0CASkFEhwas9HK6lpO
+Er2v+O24DZLoSsC9rEN3oogTsp2MONWuuhUXRF8vUcAN7JgDKPZY5zJlPru3a/Zg
+RbsctgBWoHuQlfoeF1PiYeWH7Oq7y1FCWQeLyRZ2xBobEL8xrVPqx1DizdOy9ooP
+yKH6qyglRCnnC753XPAmWOR2QN2CIsOfDE6vXYbe1jW3YrTY5WU+J/5VYAkMPLBh
+PGSnUzhBuEqs6e+nBw3U0dVKdPrIoitxnKluA4HnWnFSBkkpc5BbxyvKQjrRptoZ
+VsuRRLlPXgyHcFlLTqQoQGvAPslCs+u+YgAF+RqBg3uMkb4sxq2cJ1ajeeKhrGTR
+V68Z/nermbsky18LZaMRkwYfkfvyh22T8JzzOnnw+/64PKaDU2OECbCFFcrFrj9M
+ZyZIOcHoCCswUmP8zmyIFzDLDs/z3Q63oBdUBV+KwV00ua/sNoAmgDZaSXjn01xL
+1pqvu/Se9UjZIB37DcYREOXcAp4MNb3GkGFxW5Q/yabKo3CGolxhhnf4Z+d/OY2A
+zb4CLzlDut2XMGPDcaZRhSQGlvKvSEL02GB3j6RGfa4mI4ol0mU=
+=7HWQ
 -----END PGP SIGNATURE-----
